모바일에 맞춰 반응형 디자인 수정

--- a/todo-more-infomation/src/index.css
+++ b/todo-more-infomation/src/index.css
@@ -18,3 +18,12 @@
   --font-content: 'GmarketSansMedium', sans-serif;
   --color-success-500: #34d399;
 }
+
+.scroll-hidden {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
